Fix flicker.
With !important. Ew.

--- a/assets/stylesheets/_president-vote-counts.scss
+++ b/assets/stylesheets/_president-vote-counts.scss
@@ -244,7 +244,7 @@
     }
 
     .loading {
-      display: none;
+      display: none !important;
     }
 
     &::before {
